--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Spin and Stone</title>
+    <meta name="referrer" content="origin">
   </head>
   <body>
     <div id="root"></div>
